--- a/sprint-three/client/src/style/partial/_header.scss
+++ b/sprint-three/client/src/style/partial/_header.scss
@@ -156,6 +156,12 @@
     padding-right: 15px;
     //font-size: 1.5rem;
     font-size: 1rem;
+    color: #ffffff;
+    &:visited {
+      // text-decoration: none;
+      // decoration: none;
+      color: #ffffff;
+    }
     @include tablet {
       padding-right: 5px;
     }
