--- a/sprint-three/client/src/style/partial/_main-video.scss
+++ b/sprint-three/client/src/style/partial/_main-video.scss
@@ -204,6 +204,7 @@
 button.button.button-fullscreen-volume {
   display: flex;
   justify-content: space-around;
+  padding-top: 7px;
 }
 
 .wrapper {
