--- a/sprint-three/client/src/style/partial/_upload.scss
+++ b/sprint-three/client/src/style/partial/_upload.scss
@@ -8,6 +8,12 @@
     margin: 0 auto;
   }
   &-wrapper {
+    @include tablet {
+      border-top: 2px solid #e1e1e1;
+      padding-top: 10px;
+      width: 95%;
+      margin: 0 auto;
+    }
     @include desktop {
       width: 100%;
       display: flex;
@@ -17,17 +23,23 @@
   &__title {
     width: 95%;
     font-family: $font-family-bold;
-    margin: 24px auto 32px auto;
+    margin: 24px auto;
+    //margin: 0 auto;
+    //padding: 24px 0 32px 0;
     @include desktop {
       width: 100%;
     }
   }
   &__thumbnail-wrapper {
     width: 95%;
+
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    @include tablet {
+      width: 100%;
+    }
     @include desktop {
       width: 30%;
       margin: 0;
@@ -48,9 +60,13 @@
   }
   &-form {
     width: 95%;
+
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    @include tablet {
+      width: 100%;
+    }
     @include desktop {
       margin-right: 0;
     }
@@ -84,16 +100,18 @@
     color: #323232;
   }
   &-buttons {
-    width: 95%;
+    //width: 95%;
+    width: 100%;
     margin: 0 auto;
     @include tablet {
       display: flex;
       flex-direction: row-reverse;
       //justify-content: ;
+      //width: 100%;
     }
     @include desktop {
       margin: 0 0 0 0;
-      width: 100%;
+      //width: 100%;
     }
   }
   &-button-wrapper,
